Update paragraph content in index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   </header>
   <main>
     <h2>Welcome to my website</h2>
-    <p>I am just a linux user that uses Arch (btw). My Twitter Account is @LinuxAddict124. I have a project called PyFetch which is for some reason taken by 2 other people with one of them being the same point as my project and it makes it look like I copied it.<p>
+    <p>This is just a random website I made that I will not use that much. But since you checked this website, why not check <a href="https://linuxaddict124.github.io/newtab">this</a> out?</p>
   </main>
 </body>
